[package]
name = "tlse"
version = "0.1.0"
authors = ["Jamen Marz <me@jamen.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
test = false
bench = false

[dependencies]
tlse_sys = { path = "./tlse_sys" }
hex_table = "0.1.4"
ilhook = "1.3.0"
lazy_static = "1.4.0"
hlua = "0.4.1"

[dependencies.winapi]
version = "0.3.9"
features = [ "impl-debug", "minwindef", "winnt", "memoryapi", "processthreadsapi", "psapi", "consoleapi", "wincon", "winuser" ]
